# quant-trading-system

./: .coveragerc  .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .preserve-advanced-commit-link.py  .pylintrc  ADVANCED_INDICATORS_README.md  ADVANCED_MODULES_INTEGRATION.md  AlgorithmImports.py  DEVIN_IMPLEMENTATION_NOTES.md  Dockerfile  ENHANCED_SYSTEM_CAPABILITIES.md  IMPLEMENTATION_SUMMARY.md  INSTITUTIONAL_INTEGRATION_GUIDE.md  INSTITUTIONAL_READY.md  INTEGRATION_VERIFICATION.md  MANIFEST.in  MASTER_INTEGRATION.md  Makefile  PHOENIX_AURORA_INTEGRATION.md  PR_REFERENCE.md  QUANTCONNECT_DEPLOYMENT_GUIDE.md  README.md  README_DEPENDENCIES.md  RESTORATION_PLAN.md  SACRED_QUANT_MODULES.md  __init__.py  activate_apex_autonomy.py  anchors.py  ascend.py  audit_report.json  beyond_god_mode.py  complete_enhanced_test_results.json  compliance_check.py  comprehensive_testing_framework.py  config.json  config.yaml  (+87 more)
.github/: dependabot.yml
DNA_HEART/: DNA_HEART.cs
Deco_17._/: dashboard.py
Deco_21/: DNA_HEART.py  SPIRIT.py  VOID_TRADER.py
Deco_30/: README.md  requirements.txt
Deco_31/: alerts_config.json
Deco_37/: VOID_TRADER.py
DeepSignal/: ghost_intent_tracker.py
HumanDeviation/: false_emotion_trace.py
Latency/: wormhole_filter.py
QMP_GOD_MODE_v2_5_FINAL/: DEVIN_README.md  EMERGENCY_DEPLOYMENT_GUIDE.md  FUTURE_ECHO.py  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_REPORT.md  SPIRIT.py  SYSTEM_CAPABILITIES.md  deploy.py  emergency_stop.py  launch_verification.sh  main.py
QMP_Overrider_Complete/: IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  main.py
Shadow/: sec_pre_release_watcher.py
advanced_modules/: __init__.py  advanced_stochastic_calculus.py  ai_integration_bridge.py  alternative_data_integration.py  anti_stuck.py  arbitrage_synapse_chain.py  bayesian_market_state.py  black_litterman_optimizer.py  calibrate_rough_volatility_model.py  causal_flow_splitter.py  causal_quantum_reasoning.py  dark_pool_dna_decoder.py  dark_pool_gan.py  dask_parallel_processing.py  dna_breath.py  dna_overlord.py  emotion_harvest_ai.py  enhanced_backtester.py  enhanced_risk_management.py  event_probability_module.py  execution_alpha_optimizer.py  feature_evolution.py  fed_jet_monitor.py  heston_stochastic_engine.py  hft_order_book.py  human_lag_exploit.py  hyper_topology_analyzer.py  hyperbolic_market_manifold.py  institutional_order_flow.py  inverse_time_echoes.py  invisible_data_miner.py  language_universe_decoder.py  latency_cancellation_field.py  liquidity_event_horizon_mapper.py  live_trading_integration.py  loss_prevention_core.py  math_computation_interface.py  mathematical_integration_layer.py  measure_theory.py  meta_conscious_routing_layer.py  (+46 more)
ai/: aggressor_ai.py  mirror_ai.py  mm_psychology.py  shap_interpreter.py  spectral_signal_fusion.py
alpha_intelligence_modules/: ai_sentiment_miner.py  biometric_ceo_tracker.py  on_chain_volume_spoof_filter.py  uniswap_dex_momentum_scanner.py
arbitrage/: advanced_cointegration.py  temporal_arb.py
aurora_gateway/: __init__.py
backtest/: backtest_unified_core.py  quantum_backtest.py  quantum_reality_backtest.py  run_backtest_intraday.py  walk_forward_quantum_backtest.py
config/: dimensional_analysis.py
conscious_intelligence/: conscious_intelligence_layer.py
consciousness_layer/: consciousness_layer.py
core/: __init__.py  ai_ritual_layer.py  anti_loss_guardian.py  bayesian_state.py  chrono_execution.py  conscious_signal_generator.py  dark_pool_mapper.py  data_pipeline.py  event_blackout.py  feature_engineering.py  gamma_trap.py  genetic_evolver.py  hyper_evolution.py  hyper_topology_mapper.py  indicators.py  indicators_integration_example.py  institutional_indicators.py  institutional_signal_orchestrator.py  integrated_verification.py  market_regime_detection.py  meta_conscious_routing_layer.py  metrics.py  microstructure_detector.py  multi_asset_compiler.py  neural_pattern_recognition.py  oversoul_director.py  oversoul_integration.py  qmp_ai.py  qmp_engine_standalone.py  qmp_engine_v3.py  qmp_ultra_engine.py  qnn_overlay.py  qol_engine.py  quantum_orchestrator.py  risk_guard.py  rl_agent.py  self_coder.py  self_learning.py  (+7 more)
(+621 files in other folders)
