[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "0.1.0"
description = "A YFinance-only quantitative trading framework"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
]
sentiment = [
  "vaderSentiment>=3.3.2",
  "feedparser>=6.0.11",
  "ccxt>=4.4.0",
]

[project.scripts]
quant-trading = "quant_trading_system.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_trading_system*"]
[tool.poetry]
name = "quant-trading-system"
version = "0.1.0"
description = "A comprehensive quant trading system."
authors = ["Lapommeray <your_email@example.com>"]

[tool.poetry.dependencies]
# Core dependencies
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"
scikit-learn = "^0.24"

[tool.poetry.dev-dependencies]
# Development dependencies
pytest = "^6.2"
black = "^21.9"
mypy = "^0.910"
doctest = "^1.0"

[tool.poetry.extras]
# Optional dependencies
notebook = "^6.4"
seaborn = "^0.11"

# build-system already declared at the top of the file
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
