[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "9.0.2"
description = "A comprehensive quantum-inspired quantitative trading system"
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "yfinance>=0.2.0",
  "matplotlib>=3.3.0",
  "scikit-learn>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.3.0",
  "seaborn>=0.13",
]
sentiment = [
  "vaderSentiment>=3.3.2",
  "feedparser>=6.0.11",
  "ccxt>=4.4.0",
]
deep_learning = [
  "torch>=2.0.0",
  "tensorflow>=2.10.0",
  "transformers>=4.20.0",
  "stable-baselines3>=2.3.0",
]
quant = [
  "statsmodels>=0.12.0",
  "cvxpy>=1.3.0",
  "backtrader>=1.9.76",
  "hmmlearn>=0.3.0",
]

[project.scripts]
quant-trading = "quant_trading_system.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_trading_system*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
