[metadata]
name = quant-trading-system
version = 2.5.0
description = Advanced Quantum Finance Integration Trading System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lapommeray/quant-trading-system
author = Lapommeray
author_email = lapommerayr@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt

[options.packages.find]
include = core*, modules*, advanced_modules*, defense*, arbitrage*, data*, market_intelligence*, ultra_modules*
exclude = Deco_*, QMP_*, Sa_son_code*

[options.entry_points]
console_scripts =
    qts-run = core.qmp_engine:main
    qts-test = comprehensive_testing_framework:main

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
